--- a/elastic-apm-java/pom.xml
+++ b/elastic-apm-java/pom.xml
@@ -39,8 +39,8 @@
 
 		<dependency>
 			<groupId>co.elastic.apm</groupId>
-			<artifactId>apm-agent-api</artifactId>
-			<version>1.2.0</version>
+			<artifactId>apm-agent-attach</artifactId>
+			<version>1.17.0</version>
 		</dependency>
 
 		<dependency>
